fixed about us css alignment

--- a/laravel/resources/sass/Main.scss
+++ b/laravel/resources/sass/Main.scss
@@ -1,77 +1,83 @@
 
-#backToHomeBtn{
-    margin: 4%;
-    padding: 10px;
-    margin-top: 4%;
-    margin-left: -60px;
-}
+.mainPage {
+    background-color: white;
+    #backToHomeBtn{
+        margin: 4%;
+        padding: 25px;
+        margin-top: 1.8%;
+        margin-left: 1.3rem;
+        border-radius: 10px;
+        width: 15rem;
 
-.firstContainer{
-    margin-top: 8%;
-}
-.firstTextContainer{
-    margin-top: 5%;
-    margin-left: 10%;
-}
-
-.firstImage {
-    padding-left: 5%;
-    width: 30%;
-    height: 20%;
-    float: left;
-}
-.firstTitle{
-    font-size: 4vw;
-    margin-left: 25vw;
-}
-.firstparagraph{
-    height: 30vh;
-    margin-left: 25vw;
-    font-size: 2vw;
-}
-
-
-.secondContainer{
+        #bckBtn{
+            padding: 10px;
+            padding-right: 12px;
+            padding-left: 12px;
+        }
+    }
+    
+    .firstTextContainer{
+        margin-top: 5%;
+        margin-left: 10%;
+    }
+    
+    .firstImage {
+        padding-left: 5%;
+        width: 30%;
+        height: 20%;
+        float: left;
+    }
+    .firstTitle{
+        font-size: 4vw;
+        margin-left: 25vw;
+    }
+    .firstparagraph{
+        height: 30vh;
+        margin-left: 25vw;
+        font-size: 2vw;
+    }
+    
+    
+    .secondTextContainer{
+        margin-left: 5%;
+    }
+    .secondImage {
+        // padding-left: 25%;
+        margin-bottom: 0.9%;
+        width: 30%;
+        height: 20%;
+        float: right;
+    }
+    .secondTitle{
+        margin-top: 5rem;
+        font-size: 4vw;
+    }
+    .secondparagraph{
+        height: 30vh;
+        // margin-left: 25vw;
+        font-size: 2vw;
+        margin-right: 28vw;
+    }
+    
   
-}
-.secondTextContainer{
-    margin-left: 5%;
-}
-.secondImage {
-    // padding-left: 25%;
-    margin-bottom: 0.9%;
-    width: 30%;
-    height: 20%;
-    float: right;
-}
-.secondTitle{
-    font-size: 4vw;
-}
-.secondparagraph{
-    height: 30vh;
-    // margin-left: 25vw;
-    font-size: 2vw;
-    margin-right: 28vw;
+    .thirdTextContainer{
+        margin-left: 10%;
+    }
+    .thirdImage{
+        padding-left: 5%;
+        width: 30%;
+        height: 20%;
+        float: left;
+    }
+    .thirdTitle{
+        margin-top: 3rem;
+        font-size: 4vw;
+        margin-left: 25vw;
+    }
+    .thirdparagraph{
+        height: 30vh;
+        margin-left: 25vw;
+        font-size: 2vw;
+    }
 }
 
-.thirdContainer{
-
-}
-.thirdTextContainer{
-    margin-left: 10%;
-}
-.thirdImage{
-    padding-left: 5%;
-    width: 30%;
-    height: 20%;
-    float: left;
-}
-.thirdTitle{
-    font-size: 4vw;
-    margin-left: 25vw;
-}
-.thirdparagraph{
-    height: 30vh;
-    margin-left: 25vw;
-    font-size: 2vw;
-}
